# 616

./: CLAUDE.md  README.md  index.html  styles.css
616/frontend/: CLAUDE.md  index.html
616/frontend-develop/: index.html  styles.css
616/frontend-feature1/: index.html
616/frontend-feature2/: CLAUDE.md  README.md  index.html  styles.css
616/frontend-feature3/: CLAUDE.md  index.html  styles.css
back/: CLAUDE.md  CMakeLists.txt  binary_protocol.cpp  binary_protocol.h  error_handling.cpp  error_handling.h  http_server.cpp  http_server.h  logger.cpp  logger.h  main.cpp  memory_database.cpp  memory_database.h  monitoring.cpp  monitoring.h  persistence.cpp  persistence.h  transaction.h
back/test/: README.md  SECURITY_TEST_GUIDE.md  boundary_test.cpp  compile_security_tests.sh  compile_tests.sh  concurrent_load_test.cpp  dos_attack_test.cpp  malicious_client.cpp  run_all_attacks.sh  run_all_tests.sh  security_attack_test.cpp  stress_test.cpp
backend/: CMakeLists.txt
backend/include/: item.h  server.h  transaction.h
backend/src/: item.cpp  main.cpp  server.cpp
frontend/: app.js  canvasRenderer.js  cellEditor.js  config.js  data.js  dataStructures.js  index.html  inputManager.js  main.js  persistence.js  renderer.js  style.css  tableApp.js
frontend-feature2/: index.html
frontend/edittest/: README.md  auto-test.js  check-syntax.sh  debug-cellEditor.js  debug-test.html  excel-cursor-test.html  excel-style-test.html  minimal-test.html  simple-test.html  test-edit.html  test-edit.js
src/core/: config.js  eventManager.js
src/modules/: FilterManager.js  (+4 more)
(+49 files in other folders)
